# xlsdraw

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md  build_mingw.sh  build_win64.sh  test01.cpp  test02.cpp  test03.cpp  test04.cpp  test05.cpp  test06.cpp  test07.cpp  test08.cpp  test09.cpp  test10.cpp  test11.cpp  test12.cpp  vcpkg.json
.commandcode/taste/: taste.md
.github/workflows/: ci.yml
.opencode/plans/: 1782134655739-calm-planet.md
cmake/: xlsdrawConfig.cmake.in
example/: xlsdraw_example.cpp
include/xlsdraw/: archive_manager.hpp  cell_anchor.hpp  drawing.hpp  drawing_generator.hpp  drawing_manager.hpp  io.hpp  relationship.hpp  resource.hpp  units.hpp  workbook.hpp  worksheet.hpp  xml_escape.hpp
test/: CMakeLists.txt  main.cpp  test_drawing.cpp  test_io.cpp  test_resource.cpp  test_trim.cpp  test_units_and_worksheet.cpp  test_workbook.cpp
